2022-12-18 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Switch to new connector service registration API, resolves #13

2022-12-15 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Add driver class option to connector parameters (thanks to Christian Toffolo)
	* Relase version 3.1.0

2021-10-05 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Relase version 3.0.0

2021-09-07 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Ensure compatibility with PHP 8

2021-04-06 Francois Suter (Idéative)  <typo3@ideative.ch>

    * Ensure compatibility with TYPO3 11, drop support for TYPO3 8 and 9

2021-02-22 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Update composer manifest
	* Release version 2.3.1

2020-05-07 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Release version 2.3.0

2020-04-12 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Update documentation settings, resolves #7

2020-04-10 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Ensure compatibility with TYPO3 10

2018-12-28 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Drop interpretation of constants, resolves #2
	* Keep only Doctrine DBAL-based database class, resolves #3
	* Drop compatibility with TYPO3 7, prepare for TYPO3 9, cleanup code, resolves #4
	* Release version 2.2.0

2017-04-05 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Added compatibility with TYPO3 v8, in particular Doctrine DBAL, resolves #1
	* Released version 2.1.0

2016-05-02 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Released version 2.0.0, resolves #76013

2016-04-26 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Refactored for TYPO3 CMS 7, resolves #75929

2014-06-05 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Released version 1.4.0, resolves #57775

2014-04-02 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Verified compatibility with TYPO3 CMS 6.2, resolves #57569

2013-07-21 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Verified compatibility with TYPO3 CMS 6.1, resolves #50260