@@ -6,5 +6,5 @@
   "database" : "database",
   "query" : "SELECT * FROM foo ORDER BY bar",
   "init" : "SET NAMES utf8",
-  "fetchMode" : 4
+  "fetchMode" : 2
 }
