@@ -1,3 +1,7 @@
+2022-12-25 Francois Suter (Idéative)  <typo3@ideative.ch>
+
+	* Adapt to changes in Doctrine/DBAL, resolves #14
+
 2022-12-18 Francois Suter (Idéative)  <typo3@ideative.ch>
 
 	* Switch to new connector service registration API, resolves #13
